--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,26 @@
 ## Eclipse
 #################
 
+# Unity3D .gitignore file.
+#     Store this file at the root of your local repository.
+.DS_Store
+Library/AssetImportState
+Library/AssetServerCacheV3
+Library/FailedAssetImports.txt
+Library/ScriptAssemblies
+Library/ScriptMapper
+Library/assetDatabase3
+Library/cache
+Library/expandedItems
+Library/metadata
+Library/previews
+Library/guidmapper
+Temp
+*.pidb
+build
+
+
+
 *.pydevproject
 .project
 .metadata
